--- a/src/WpfOfficeTheme/MainWindow.xaml
+++ b/src/WpfOfficeTheme/MainWindow.xaml
@@ -98,6 +98,7 @@
             <Button Grid.Column="1" Width="60" HorizontalAlignment="Left" Content="Redo" />
             <Button Grid.Column="2" Width="60" HorizontalAlignment="Right" Content="Edit" />
             <Button Grid.Column="3" Width="60" HorizontalAlignment="Right" Content="Save" />
+            <Button x:Name="Ribbon" Content="Ribbon" Grid.Column="2" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Width="75" Click="Ribbon_Click"/>
         </Grid>
         
         <Separator Grid.Row="2" Grid.Column="0" Width="200" VerticalAlignment="Bottom"
